@@ -6,7 +6,7 @@
 <meta name="generator" content="Docutils 0.7: http://docutils.sourceforge.net/" />
 <title>Geany</title>
 <meta name="authors" content="Enrico Tröger  Nick Treleaven  Frank Lanitz" />
-<meta name="date" content="$Date$" />
+<meta name="date" content="2011-05-03" />
 <style type="text/css">
 
 /*
@@ -139,7 +139,7 @@ Stylesheet for Geany's documentation based on a version of John Gabriele.
 <br />Nick Treleaven
 <br />Frank Lanitz</td></tr>
 <tr><th class="docinfo-name">Date:</th>
-<td>$Date$</td></tr>
+<td>2011-05-03</td></tr>
 <tr><th class="docinfo-name">Version:</th>
 <td>0.21</td></tr>
 </tbody>
@@ -5082,11 +5082,11 @@ available with GTK 2.12 or above).</td>
 <tr><td>allow_always_save</td>
 <td>Whether files can be saved always, even if
 they don't have any changes. By default,
-the Save buttons and menu items are
-disabled when a file is unchanged. When
-setting this option to true, the Save
-buttons and menu items are always active
-and files can be saved.</td>
+the Save button and menu item are disabled
+when a file is unchanged. When setting
+this option to true, the Save button and
+menu item are always active and files can
+be saved.</td>
 <td>false</td>
 </tr>
 <tr><td>compiler_tab_autoscroll</td>
@@ -6580,7 +6580,7 @@ USE OR PERFORMANCE OF THIS SOFTWARE.</p>
 <div class="footer">
 <hr class="footer" />
 <a class="reference external" href="geany.txt">View document source</a>.
-Generated on: 2011-05-03 18:39 UTC.
+Generated on: 2011-05-22 10:30 UTC.
 Generated by <a class="reference external" href="http://docutils.sourceforge.net/">Docutils</a> from <a class="reference external" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 
 </div>
